style: stop stars from going to newline when 10 moves, and adjust spacing

--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,6 @@ button {
   width: 21%;
 }
 
-/* #container {
-  margin: 0;
-  width: 700px;
-} */
-
 h1 {
   font-weight: lighter;
   letter-spacing: 5px;
@@ -38,8 +33,7 @@ h1 {
 #moves-and-stars {
   display: inline-block;
   letter-spacing: 2px;
-  padding-right: 50px;
-  width: 20%
+  width: 40%;
 }
 
 .solved {
@@ -60,5 +54,5 @@ h1 {
   display: inline-block;
   font-weight: lighter;
   letter-spacing: 2px;
-  width: 30%
+  width: 40%
 }
